updated auth middleware to process session not token. Implemented auth into Swagger.
